--- a/cora-e-theo/public/index.html
+++ b/cora-e-theo/public/index.html
@@ -7,14 +7,17 @@
     <meta name="theme-color" content="#FFF" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Bem vindo ao nosso site! Confira nossa história, agenda de shows, músicas e muito mais."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Cora e Theo</title>
   </head>
   <body>
-    <noscript>Você precisa habilitar o JavaScript de seu navegador para visualizar o conteúdo</noscript>
+    <noscript
+      >Você precisa habilitar o JavaScript de seu navegador para visualizar o
+      conteúdo</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
